--- a/docker-compose.yml.j2
+++ b/docker-compose.yml.j2
@@ -17,7 +17,7 @@ services:
       retries: 5
 
   synapse:
-    image: matrixdotorg/synapse:latest
+    image: {{ synapse_image }}
     container_name: synapse_server
     depends_on:
       db:
